--- a/seminars/safs_aul_seminar.Rmd
+++ b/seminars/safs_aul_seminar.Rmd
@@ -31,32 +31,23 @@ _Northwest Fisheries Science Center<br>National Marine Fisheries Service<br>_
 
 ### .blue-text[ Eric Buhle, Kevin See ] (Quantitative Consultants, Inc)
 
-### .blue-text[ Stephanie Hampton, Steve Katz ] (Washington St Univ)
-
-### .blue-text[ Daniel Schindler, Jan Ohlberger ] (Univ Washington)
-
 ### .blue-text[ Brice Semmens ] (Scripps)
+
+### .blue-text[ Casey Ruff, Eric Beamer ] (Skagit River Coop)
+
+### .blue-text[ Joe Anderson ] (WDFW)
 
 ---
 
 # Acknowledgments
 
-.blue-text[
-## Post-docs
+## .blue-text[Faculty] (UW, Wash St, Oregon St, U Alaska)
 
-## Grad students
+## .blue-text[Post-docs]
 
-## Undergrads
+## .blue-text[Grad students]
 
-## _Many_ others
-]
-
----
-
-class: frimg
-
-background-image: url(figs/minnesota.jpg)
-background-size: 70%
+## .blue-text[_Many_ others]
 
 ---
 
@@ -64,6 +55,13 @@ class: frimg
 
 background-image: url(figs/wisconsin.jpg)
 background-size: 75%
+
+---
+
+class: frimg
+
+background-image: url(figs/minnesota.jpg)
+background-size: 70%
 
 ---
 
@@ -713,7 +711,7 @@ for(i in 1:3) {
 # Abundance & catches of groundfish
 
 .right.blue-text[
-## How do common spatial patterns change over time?
+## How do spatial patterns change over time?
 ]
 
 .gray-text.right[
@@ -734,11 +732,13 @@ class: inverse, center, middle
 
 class: middle
 
-.blue-text.under[
+.blue-text[
 # Evolutionarily Significant Unit (ESU)
 ]
 
-## A group of animals considered distinct for the purpose of conservation 
+## A group of animals considered distinct for the purpose of conservation
+
+### .right[Waples (1991)]
 
 ---
 
@@ -937,9 +937,9 @@ background-size: 95%
 
 # Two modifications to the model
 
-## 1) .orange-text[Supplementation] effect is hierarchical across popns
+## 1) Supplementation effect is .orange-text[hierarchical across popns]
 
-## 2) .red-text[Errors] include a common year effect
+## 2) Errors include a .red-text[common year effect]
 
 ---
 
@@ -1144,8 +1144,8 @@ background-size: cover
 
 class: frimg, center
 background-image: url(figs/flow_effects.png)
-background-position: 50% 75%
-background-size: 85%
+background-position: 50% 70%
+background-size: 80%
 
 # Flow effects on productivity
 
@@ -1166,7 +1166,7 @@ background-size: 85%
 
 class: frimg, center
 background-image: url(figs/BH_form.png)
-background-position: 50% 70%
+background-position: 50% 75%
 background-size: 80%
 
 # Theoretical parent-offspring relationship
@@ -1209,52 +1209,12 @@ background-size: 75%
 
 ---
 
-class: inverse, center, middle
-
-# Future directions
-
----
-
-# Marine & freshwater food-webs
-
-.blue-text.right[
-## How do species interactions change over time?
-]
-
----
-
-class: frimg
-background-image: url(figs/san_nic.png)
-background-position: 50% 70%
-background-size: 90%
-
-# Kelp forest food webs
-
----
-
-# Ecological portfolios
-
-.blue-text.right[
-## How do risks vs rewards change over time?
-]
-
----
-
-class: frimg
-background-image: url(figs/capm.png)
-background-position: 50% 80%
-background-size: 70%
-
-# Risk vs returns of assets
-
----
-
 # In summary
 
 .blue-text[
 ## Much of our data is "noisy"
 
-## Identifying signals in the noise can be challenging
+## Separating signals from the noise can be challenging
 
 ## Hierarchical models offer great promise,
 
